2009-11-12  Steve VanDeBogart  <vandebo@chromium.org>

Reviewed by Adam Barth.

        Calculate the time offset only if we were able to parse
        the date string. This saves an IPC in Chromium for
        invalid date strings.
        https://bugs.webkit.org/show_bug.cgi?id=31416

        * wtf/DateMath.cpp:
        (WTF::parseDateFromNullTerminatedCharacters):
        (JSC::parseDateFromNullTerminatedCharacters):

git-svn-id: svn://svn.chromium.org/blink/trunk@50927 bbb929c8-8fbe-4397-9dbb-9b2b20218538