third_party/WebKit/JavaScriptCore/wtf/DateMath.cpp
@@ -825,6 +825,9 @@ double parseDateFromNullTerminatedCharacters(const char* dateString)
     bool haveTZ;
     int offset;
     double ms = parseDateFromNullTerminatedCharacters(dateString, haveTZ, offset);
+    if (isnan(ms))
+        return NaN;
+
     // fall back to local timezone
     if (!haveTZ) {
         double utcOffset = calculateUTCOffset();
@@ -968,6 +971,9 @@ double parseDateFromNullTerminatedCharacters(ExecState* exec, const char* dateSt
     bool haveTZ;
     int offset;
     double ms = WTF::parseDateFromNullTerminatedCharacters(dateString, haveTZ, offset);
+    if (isnan(ms))
+        return NaN;
+
     // fall back to local timezone
     if (!haveTZ) {
         double utcOffset = getUTCOffset(exec);
